[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main/Player/PlayerNoOutline.png" type="Texture" id=1]
[ext_resource path="res://Main/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Main/Player/Sword.tscn" type="PackedScene" id=3]
[ext_resource path="res://Zone1/Background/BGz1.tscn" type="PackedScene" id=4]
[ext_resource path="res://Main/Player/vfxTest.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 13.4175
height = 67.3977

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.1283, 1.6022 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CameraRig" type="Position2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="CameraRig"]
position = Vector2( 0, -366.83 )
current = true
zoom = Vector2( 2, 2 )
limit_smoothed = true
smoothing_speed = 6.0

[node name="BGz1" parent="CameraRig/Camera2D" instance=ExtResource( 4 )]
position = Vector2( -0.307373, 0 )
scale = Vector2( 2, 2 )

[node name="vfxTest" type="Sprite" parent="CameraRig/Camera2D"]
modulate = Color( 0.984314, 0.886275, 0.631373, 0.219608 )
scale = Vector2( 2, 2 )
z_index = 1000
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.14508, -13.2917 )
scale = Vector2( 0.55, 0.55 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CollisionDetection" type="Node2D" parent="."]
position = Vector2( 1.28818, -18.0345 )

[node name="GroundDetection" type="Area2D" parent="CollisionDetection"]
position = Vector2( -1.48804, 67.7263 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionDetection/GroundDetection"]
position = Vector2( 0, 0.214638 )
shape = SubResource( 2 )

[node name="CellingDetection" type="Area2D" parent="CollisionDetection"]
position = Vector2( -0.94693, -29.5722 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionDetection/CellingDetection"]
shape = SubResource( 2 )

[node name="Sword" parent="." instance=ExtResource( 3 )]
[connection signal="body_entered" from="CollisionDetection/GroundDetection" to="." method="_on_GroundDetection_body_entered"]
[connection signal="body_exited" from="CollisionDetection/GroundDetection" to="." method="_on_GroundDetection_body_exited"]
[connection signal="body_entered" from="CollisionDetection/CellingDetection" to="." method="_on_CellingDetection_body_entered"]
[connection signal="body_exited" from="CollisionDetection/CellingDetection" to="." method="_on_CellingDetection_body_exited"]
